--- a/index.html
+++ b/index.html
@@ -7,53 +7,67 @@
   <link rel="stylesheet" href="styles.css">
   <title>Meu site</title>
 </head>
+
 <body>
- <header>
-  <nav id="navbar">
-    <i class="fa-solid fa-burger" id="nav_logo">Frankfurt Acabamentos</i>
+  <header>
+    <nav id="navbar">
+      <i class="fa-solid fa-burger" id="nav_logo">Frankfurt Acabamentos</i>
 
-    <ul id="nav_list">
-      <li class="nav_item">
-        <a href="#home">Início</a>
-      </li>
-      <li class="nav_item">
-        <a href="#sobre">Sobre</a>
-      </li>
-      <li class="nav_item">
-        <a href="#contato">Contato</a>
-      </li>
-    </ul>
+      <ul id="nav_list">
+        <li class="nav_item">
+          <a href="#home">Início</a>
+        </li>
+        <li class="nav_item">
+          <a href="#sobre">Sobre</a>
+        </li>
+        <li class="nav_item">
+          <a href="#contato">Contato</a>
+        </li>
+        <li class="nav_item">
+          <a href="">Projetos</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <div id="imagem">
+    <img src="./images/living-room-581073_640.jpg" alt="Sala de estar vitoriana">
+  </div>
 
-    <button class="btn-default">
-      Orçamento
-    </button>
-  </nav>
- </header>
- <div id="imagem">
-  <img src="./images/living-room-581073_640.jpg" alt="Sala de estar vitoriana">
- </div>
-
- <div class="parte1">
-  <h1>Transforme seu ambiente</h1>
-  <p>Na Frankfurt acabamentos você dá mais <strong>personalidade</strong> à sua casa. <br> Faça um orçamento conosco já!</p>
-  <br>
-  <br>
-  <br>
+  <div class="parte1">
+    <h1>Transforme seu ambiente</h1>
+    <p>Na Frankfurt acabamentos você dá mais <strong>personalidade</strong> à sua casa. <br> Faça um orçamento conosco
+      já!</p>
+    <br>
+    <br>
     <a href="" type="button" class="button">Aqui</a>
-</div>
+  </div>
 
-<article class="parte2">
-  <h2>Porque escolher a Frankfurt?</h2>
-  <p>Com anos de experiência no mercado de acabamentos e design de interiores, nossa empresa é sinônimo de tradição e compromisso com a excelência. Trabalhamos com materiais de alta qualidade e atenção aos detalhes, criando ambientes sofisticados e funcionais. Nosso objetivo é sempre superar as expectativas dos clientes, entregando resultados duradouros e com um toque único de design. 
-    Valorizamos a confiança de nossos clientes e buscamos soluções inovadoras, mantendo a essência de um trabalho artesanal. 
-    Acreditamos que cada espaço reflete a história de quem o habita, e é isso que nos motiva a criar projetos memoráveis.</p>
-  <br>
-  <br>
-  <br>
+  <article class="parte2">
+    <h2>Porque escolher a Frankfurt?</h2>
+    <p>Com anos de experiência no mercado de acabamentos e design de interiores, nossa empresa é sinônimo de tradição e
+      compromisso com a excelência. Trabalhamos com materiais de alta qualidade e atenção aos detalhes, criando
+      ambientes sofisticados e funcionais. Nosso objetivo é sempre superar as expectativas dos clientes, entregando
+      resultados duradouros e com um toque único de design.
+      Valorizamos a confiança de nossos clientes e buscamos soluções inovadoras, mantendo a essência de um trabalho
+      artesanal.
+      Acreditamos que cada espaço reflete a história de quem o habita, e é isso que nos motiva a criar projetos
+      memoráveis.</p>
+    <br>
+    <br>
+    <br>
 
   </article>
- 
 
+  <article class="parte3">
+    <h2>Nosso compromisso com você</h2>
+    <p>Com o nosso serviço de design de interiores, você tem total controle sobre cada detalhe do projeto. 
+      Juntos, vamos criar um ambiente que reflita seu estilo pessoal e atenda às suas necessidades. 
+      Desde a escolha das cores até a disposição dos móveis, você poderá acompanhar e aprovar todas as decisões.
+      Estamos aqui para garantir que o seu lar seja exatamente como você imagina!</p>
+    <br>
+    <br>
+    <br>
+  </article>
 </body>
 
 </html>
