teste do commit anterior

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       Desde a escolha das cores até a disposição dos móveis, você poderá acompanhar e aprovar todas as decisões.
       Estamos aqui para garantir que o seu lar seja exatamente como você imagina!</p>
     <br>
-    <br>
+    <br> teste pós commit
     <br>
   </article>
 </body>
