organizados textos adicionais

--- a/index.html
+++ b/index.html
@@ -60,13 +60,22 @@
 
   <article class="parte3">
     <h2>Nosso compromisso com você</h2>
-    <p>Com o nosso serviço de design de interiores, você tem total controle sobre cada detalhe do projeto. 
-      Juntos, vamos criar um ambiente que reflita seu estilo pessoal e atenda às suas necessidades. 
+    <p>Com o nosso serviço de design de interiores, você tem total controle sobre cada detalhe do projeto.
+      Juntos, vamos criar um ambiente que reflita seu estilo pessoal e atenda às suas necessidades.
       Desde a escolha das cores até a disposição dos móveis, você poderá acompanhar e aprovar todas as decisões.
       Estamos aqui para garantir que o seu lar seja exatamente como você imagina!</p>
     <br>
-    <br> teste pós commit
+    <br> <!--teste pós commit-->
     <br>
+  </article>
+
+  <article id="parte4">
+    <div id="div4">
+      <h2>texto</h2>
+      <p>A Frankfurt acabamentos transforma espaços com elegância e funcionalidade.
+        Em parceria com a Revest Acabamentos, oferecemos materiais de alta qualidade
+        e design inovador. Criamos ambientes únicos que refletem estilo e personalidade.</p>
+    </div>
   </article>
 </body>
 
