--- a/index.html
+++ b/index.html
@@ -1,82 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Meu site</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Meu site</title>
-</head>
+  <body>
+    <header>
+      <nav id="navbar">
+        <i class="fa-solid fa-home" id="nav_logo">Frankfurt Acabamentos</i>
 
-<body>
-  <header>
-    <nav id="navbar">
-      <i class="fa-solid fa-burger" id="nav_logo">Frankfurt Acabamentos</i>
+        <ul id="nav_list">
+          <li class="nav_item">
+            <a href="https://wssdesign.com.br/lp-03/?utm_source=google_ads&utm_medium=176413715972&utm_campaign=21953849006&utm_content=726134898187&utm_term=design%20de%20interiores&gad_source=1&gclid=Cj0KCQjw2N2_BhCAARIsAK4pEkV1KSvmj5KPI9disRrlFH64sHBPcgXvb3yjNY0FcqjUh3LFfUqTn-YaAgs3EALw_wcB">Tente a WSS Design!</a>
+          </li>
+          <li class="nav_item">
+            <a href="#footer">Sobre</a>
+          </li>
+          <li class="nav_item">
+            <a href="https://www.revestacabamentos.com.br/?srsltid=AfmBOorHib5PGYH4o5efGhD5Cdlkxx5mQvB42FIttxqQF6uxz33guUng">Parceiro Revest</a>
+          </li>
+          <li class="nav_item">
+            <a href="https://www.plaenge.com.br/">Design By Plaenge</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-      <ul id="nav_list">
-        <li class="nav_item">
-          <a href="#home">Início</a>
-        </li>
-        <li class="nav_item">
-          <a href="#sobre">Sobre</a>
-        </li>
-        <li class="nav_item">
-          <a href="#contato">Contato</a>
-        </li>
-        <li class="nav_item">
-          <a href="">Projetos</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <div id="imagem">
-    <img src="./images/living-room-581073_640.jpg" alt="Sala de estar vitoriana">
-  </div>
+    <main>
+      <article class="parte1">
+        <h1>Transforme seu ambiente</h1>
+        <p>
+          Transforme sua casa em um ambiente único e sofisticado com a nossa ajuda! Na Frankfurt Acabamentos,
+           unimos criatividade e qualidade para criar espaços que refletem sua personalidade. Com anos de experiência no mercado,
+            oferecemos soluções personalizadas que valorizam seu investimento.
+            Juntos, transformamos projetos em grandes realizações! Visite a WSS Design e crie um modelo 3D!
+        </p>
+        <br/>
+        <br/>
+      </article>
+      <div id="imagem">
+        <img
+          src="./images/living-room-581073_640.jpg"
+          alt="Sala de estar vitoriana"
+        />
+      </div>
+    </main>
 
-  <div class="parte1">
-    <h1>Transforme seu ambiente</h1>
-    <p>Na Frankfurt acabamentos você dá mais <strong>personalidade</strong> à sua casa. <br> Faça um orçamento conosco
-      já!</p>
-    <br>
-    <br>
-    <a href="" type="button" class="button">Aqui</a>
-  </div>
+  
 
-  <article class="parte2">
-    <h2>Porque escolher a Frankfurt?</h2>
-    <p>Com anos de experiência no mercado de acabamentos e design de interiores, nossa empresa é sinônimo de tradição e
-      compromisso com a excelência. Trabalhamos com materiais de alta qualidade e atenção aos detalhes, criando
-      ambientes sofisticados e funcionais. Nosso objetivo é sempre superar as expectativas dos clientes, entregando
-      resultados duradouros e com um toque único de design.
-      Valorizamos a confiança de nossos clientes e buscamos soluções inovadoras, mantendo a essência de um trabalho
-      artesanal.
-      Acreditamos que cada espaço reflete a história de quem o habita, e é isso que nos motiva a criar projetos
-      memoráveis.</p>
-    <br>
-    <br>
-    <br>
-
-  </article>
-
+    <section class="sobre">
+      <article class="parte2">
+        <h2>Porque escolher a Frankfurt?</h2>
+        <p>
+          Com anos de experiência no mercado de acabamentos e design de
+          interiores, nossa empresa é sinônimo de tradição e compromisso com a
+          excelência. Trabalhamos com materiais de alta qualidade e atenção aos
+          detalhes, criando ambientes sofisticados e funcionais. Nosso objetivo é
+          sempre superar as expectativas dos clientes, entregando resultados
+          duradouros e com um toque único de design. Valorizamos a confiança de
+          nossos clientes e buscamos soluções inovadoras, mantendo a essência de
+          um trabalho artesanal. Acreditamos que cada espaço reflete a história de
+          quem o habita, e é isso que nos motiva a criar projetos memoráveis.
+        </p>
+        <br />
+        <br />
+        <br />
+      </article>
+      <div id="imagem2">
+        <img src="./images/pexels-jvdm-1457842.jpg" alt="Sala tranquila"/>
+      </div>
+    </section>
+   
+<section class="purpose">
   <article class="parte3">
     <h2>Nosso compromisso com você</h2>
-    <p>Com o nosso serviço de design de interiores, você tem total controle sobre cada detalhe do projeto.
-      Juntos, vamos criar um ambiente que reflita seu estilo pessoal e atenda às suas necessidades.
-      Desde a escolha das cores até a disposição dos móveis, você poderá acompanhar e aprovar todas as decisões.
-      Estamos aqui para garantir que o seu lar seja exatamente como você imagina!</p>
-    <br>
-    <br> <!--teste pós commit-->
-    <br>
-  </article>
+    <p>
+      Com o nosso serviço de design de interiores, você tem total controle
+      sobre cada detalhe do projeto. Juntos, vamos criar um ambiente que
+      reflita seu estilo pessoal e atenda às suas necessidades. Desde a
+      escolha das cores até a disposição dos móveis, você poderá acompanhar e
+      aprovar todas as decisões. Estamos aqui para garantir que o seu lar seja
+      exatamente como você imagina!
+    </p>
+    <br />
+    <br />
+    <!--teste pós commit-->
+    <br />
+  </article> 
+  
+  <div id="imagem3">
+    <img src="./images/pexels-fotoaibe-1571460.jpg" alt="Sala de estar chique" />
+   </div>
+</section>
+    
+  </body>
 
-  <article id="parte4">
-    <div id="div4">
-      <h2>texto</h2>
-      <p>A Frankfurt acabamentos transforma espaços com elegância e funcionalidade.
-        Em parceria com a Revest Acabamentos, oferecemos materiais de alta qualidade
-        e design inovador. Criamos ambientes únicos que refletem estilo e personalidade.</p>
-    </div>
-  </article>
-</body>
-
+  <footer class="footer" id="footer">
+    <p>Aluno: <strong>Mateus Garcia Costa</strong></p>
+ <p>Faculdade Senac – 2° Bimestre – 2025</p>
+    <p>Prof.: <strong>André Noel</strong></p>
+    <p>Este Website é apenas para fins educativos. Não há retorno financeiro.</p>
+</footer>
 </html>
